--- a/nackenschmerzen/index.html
+++ b/nackenschmerzen/index.html
@@ -352,7 +352,7 @@
 
                             <!-- CTA Button -->
                             <div class="mt-10 text-center">
-                                <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&subid=[cmc_vid]"
+                                <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441"
                                     class="inline-block px-6 py-3 text-base font-bold text-white transition duration-300 bg-green-600 rounded-lg shadow-md hover:bg-green-700">
                                     👉 Jetzt Derila Ergo sichern & 70 % sparen
                                 </a>
@@ -403,7 +403,7 @@
                             schmerzfreier Schlaf anfühlt.
                         </p>
                         <a class="inline-block px-8 py-3 text-lg font-bold text-white transition duration-300 bg-blue-600 rounded-lg shadow-lg hover:bg-blue-700"
-                            href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&subid=[cmc_vid]">
+                            href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441">
                             Jetzt Verfügbarkeit prüfen und dein Derila Ergo Kissen zum Sonderpreis bestellen
                         </a>
                         <p class="mt-4 text-sm text-gray-600">
@@ -553,7 +553,7 @@
 
             <!-- Button -->
             <div class="mb-6 text-center">
-                <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&subid=[cmc_vid]"
+                <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441"
                     class="inline-block px-6 py-3 font-bold text-white rounded-md hover:opacity-90 transition-opacity bg-green-600"
                     target="_blank" rel="noopener noreferrer">
                     70% RABATT<br>Jetzt klicken
@@ -614,17 +614,17 @@
 
         <!-- Linkbereich -->
         <div class="flex flex-wrap justify-center gap-4 text-sm font-medium text-center text-gray-200">
-            <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&subid=[cmc_vid]"
+            <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441"
                 class="hover:underline">Impressum</a>
-            <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&subid=[cmc_vid]"
+            <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441"
                 class="hover:underline">Kontakt</a>
-            <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&subid=[cmc_vid]"
+            <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441"
                 class="hover:underline">Allgemeine Geschäftsbedingungen</a>
-            <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&subid=[cmc_vid]"
+            <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441"
                 class="hover:underline">Datenschutzbestimmung</a>
-            <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&subid=[cmc_vid]"
+            <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441"
                 class="hover:underline">Rückgaberichtlinie</a>
-            <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&subid=[cmc_vid]"
+            <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441"
                 class="hover:underline">Meine Bestellung verfolgen</a>
         </div>
 
