--- a/nackenschmerzen/index.html
+++ b/nackenschmerzen/index.html
@@ -555,7 +555,7 @@
             <div class="mb-6 text-center">
                 <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441"
                     class="inline-block px-6 py-3 font-bold text-white rounded-md hover:opacity-90 transition-opacity bg-green-600"
-                    target="_blank" rel="noopener noreferrer">
+                    rel="noopener noreferrer">
                     70% RABATT<br>Jetzt klicken
                 </a>
             </div>
