--- a/nackenschmerzen/index.html
+++ b/nackenschmerzen/index.html
@@ -7,16 +7,29 @@
     <title>„Ich dachte, meine Nackenschmerzen wären einfach Teil des Älterwerdens – bis ich dies probierte“</title>
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <script>
-        window.clickmagick_cmc = {
-            uid: '205922',
-            hid: '260930813',
-            cmc_project: 'DerilaErgo - DE',
-            vid_info: 'on',
-            utm_source: 'organic',
+    <meta http-equiv="delegate-ch"
+        content="sec-ch-ua https://trk.mein-derila.de; sec-ch-ua-mobile https://trk.mein-derila.de; sec-ch-ua-arch https://trk.mein-derila.de; sec-ch-ua-model https://trk.mein-derila.de; sec-ch-ua-platform https://trk.mein-derila.de; sec-ch-ua-platform-version https://trk.mein-derila.de; sec-ch-ua-bitness https://trk.mein-derila.de; sec-ch-ua-full-version-list https://trk.mein-derila.de; sec-ch-ua-full-version https://trk.mein-derila.de">
+    <style>
+        .dtpcnt {
+            opacity: 0;
         }
+    </style>
+    <script>
+        (function (d, c, k, l, r, t, g, u, A, e, m, v, B, a, n, p, h, q, w, D, x) {
+            function y() { for (var f = c.querySelectorAll(".dtpcnt"), b = 0, a = f.length; b < a; b++)f[b][u] = f[b][u].replace(/(^|\s+)dtpcnt($|\s+)/g, "") } function C(a, b, d, e) { var f = new Date; f.setTime(f.getTime() + (e || 864E5)); c.cookie = a + "=" + b + "; " + d + "samesite=Strict; expires=" + f.toGMTString() + "; path=/"; k.setItem(a, b); k.setItem(a + "-expires", f.getTime()) } function z(a) {
+                var b = c.cookie.match(new RegExp("(^| )" + a + "=([^;]+)")); return b ? b.pop() : k.getItem(a + "-expires") && +k.getItem(a +
+                    "-expires") > (new Date).getTime() ? k.getItem(a) : null
+            } x = "https:" === d.location.protocol ? "secure; " : ""; d[e] || (d[e] = function () { (d[e].q = d[e].q || []).push(arguments) }, p = c[r], c[r] = function () { p && p.apply(this, arguments); if (d[e] && !d[e].hasOwnProperty("params") && /loaded|interactive|complete/.test(c.readyState)) for (; a = c[t][m++];)/\/?click\/?($|(\/[0-9]+)?$)/.test(a.pathname) && (a[g] = "javascrip" + d.postMessage.toString().slice(4, 5) + ":" + e + '.l="' + a[g] + '",void 0') }, setTimeout(function () {
+                (q = /[?&]cpid(=([^&#]*)|&|#|$)/.exec(d.location.href)) &&
+                    q[2] && (h = q[2], w = z("vl-" + h)); var f = z("vl-cep"), b = location[g]; if ("savedCep" === B && f && (!h || "undefined" === typeof h) && 0 > b.indexOf("cep=")) { var e = -1 < b.indexOf("?") ? "&" : "?"; b += e + f } a = c.createElement("script"); n = c.scripts[0]; a.defer = 1; a.src = v + (-1 === v.indexOf("?") ? "?" : "&") + "lpref=" + l(c.referrer) + "&lpurl=" + l(b) + "&lpt=" + l(c.title) + "&vtm=" + (new Date).getTime() + (w ? "&uw=no" : ""); a[A] = function () { for (m = 0; a = c[t][m++];)/dtpCallback\.l/.test(a[g]) && (a[g] = decodeURIComponent(a[g]).match(/dtpCallback\.l="([^"]+)/)[1]); y() };
+                n.parentNode.insertBefore(a, n); h && C("vl-" + h, "1", x)
+            }, 0), setTimeout(y, 7E3))
+        })(window, document, localStorage, encodeURIComponent, "onreadystatechange", "links", "href", "className", "onerror", "dtpCallback", 0, "https://trk.mein-derila.de/d/.js", "savedCep");
     </script>
-    <script src='//go.futurelifetricks.com/d6334ede.js'></script>
+    <noscript>
+        <link href="https://trk.mein-derila.de/d/.js?noscript=true&lpurl=" rel="stylesheet" />
+    </noscript>
+
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
@@ -352,7 +365,7 @@
 
                             <!-- CTA Button -->
                             <div class="mt-10 text-center">
-                                <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441"
+                                <a href="https://trk.mein-derila.de/click"
                                     class="inline-block px-6 py-3 text-base font-bold text-white transition duration-300 bg-green-600 rounded-lg shadow-md hover:bg-green-700">
                                     👉 Jetzt Derila Ergo sichern & 70 % sparen
                                 </a>
@@ -403,7 +416,7 @@
                             schmerzfreier Schlaf anfühlt.
                         </p>
                         <a class="inline-block px-8 py-3 text-lg font-bold text-white transition duration-300 bg-blue-600 rounded-lg shadow-lg hover:bg-blue-700"
-                            href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441">
+                            href="https://trk.mein-derila.de/click">
                             Jetzt Verfügbarkeit prüfen und dein Derila Ergo Kissen zum Sonderpreis bestellen
                         </a>
                         <p class="mt-4 text-sm text-gray-600">
@@ -553,7 +566,7 @@
 
             <!-- Button -->
             <div class="mb-6 text-center">
-                <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441"
+                <a href="https://trk.mein-derila.de/click"
                     class="inline-block px-6 py-3 font-bold text-white rounded-md hover:opacity-90 transition-opacity bg-green-600"
                     rel="noopener noreferrer">
                     70% RABATT<br>Jetzt klicken
@@ -614,18 +627,12 @@
 
         <!-- Linkbereich -->
         <div class="flex flex-wrap justify-center gap-4 text-sm font-medium text-center text-gray-200">
-            <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441"
-                class="hover:underline">Impressum</a>
-            <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441"
-                class="hover:underline">Kontakt</a>
-            <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441"
-                class="hover:underline">Allgemeine Geschäftsbedingungen</a>
-            <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441"
-                class="hover:underline">Datenschutzbestimmung</a>
-            <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441"
-                class="hover:underline">Rückgaberichtlinie</a>
-            <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441"
-                class="hover:underline">Meine Bestellung verfolgen</a>
+            <a href="https://trk.mein-derila.de/click" class="hover:underline">Impressum</a>
+            <a href="https://trk.mein-derila.de/click" class="hover:underline">Kontakt</a>
+            <a href="https://trk.mein-derila.de/click" class="hover:underline">Allgemeine Geschäftsbedingungen</a>
+            <a href="https://trk.mein-derila.de/click" class="hover:underline">Datenschutzbestimmung</a>
+            <a href="https://trk.mein-derila.de/click" class="hover:underline">Rückgaberichtlinie</a>
+            <a href="https://trk.mein-derila.de/click" class="hover:underline">Meine Bestellung verfolgen</a>
         </div>
 
         <!-- Gesundheitshinweis -->
