--- a/schnarchen/index.html
+++ b/schnarchen/index.html
@@ -21,7 +21,7 @@
                     "-expires") > (new Date).getTime() ? k.getItem(a) : null
             } x = "https:" === d.location.protocol ? "secure; " : ""; d[e] || (d[e] = function () { (d[e].q = d[e].q || []).push(arguments) }, p = c[r], c[r] = function () { p && p.apply(this, arguments); if (d[e] && !d[e].hasOwnProperty("params") && /loaded|interactive|complete/.test(c.readyState)) for (; a = c[t][m++];)/\/?click\/?($|(\/[0-9]+)?$)/.test(a.pathname) && (a[g] = "javascrip" + d.postMessage.toString().slice(4, 5) + ":" + e + '.l="' + a[g] + '",void 0') }, setTimeout(function () {
                 (q = /[?&]cpid(=([^&#]*)|&|#|$)/.exec(d.location.href)) &&
-                q[2] && (h = q[2], w = z("vl-" + h)); var f = z("vl-cep"), b = location[g]; if ("savedCep" === B && f && (!h || "undefined" === typeof h) && 0 > b.indexOf("cep=")) { var e = -1 < b.indexOf("?") ? "&" : "?"; b += e + f } a = c.createElement("script"); n = c.scripts[0]; a.defer = 1; a.src = v + (-1 === v.indexOf("?") ? "?" : "&") + "lpref=" + l(c.referrer) + "&lpurl=" + l(b) + "&lpt=" + l(c.title) + "&vtm=" + (new Date).getTime() + (w ? "&uw=no" : ""); a[A] = function () { for (m = 0; a = c[t][m++];)/dtpCallback\.l/.test(a[g]) && (a[g] = decodeURIComponent(a[g]).match(/dtpCallback\.l="([^"]+)/)[1]); y() };
+                    q[2] && (h = q[2], w = z("vl-" + h)); var f = z("vl-cep"), b = location[g]; if ("savedCep" === B && f && (!h || "undefined" === typeof h) && 0 > b.indexOf("cep=")) { var e = -1 < b.indexOf("?") ? "&" : "?"; b += e + f } a = c.createElement("script"); n = c.scripts[0]; a.defer = 1; a.src = v + (-1 === v.indexOf("?") ? "?" : "&") + "lpref=" + l(c.referrer) + "&lpurl=" + l(b) + "&lpt=" + l(c.title) + "&vtm=" + (new Date).getTime() + (w ? "&uw=no" : ""); a[A] = function () { for (m = 0; a = c[t][m++];)/dtpCallback\.l/.test(a[g]) && (a[g] = decodeURIComponent(a[g]).match(/dtpCallback\.l="([^"]+)/)[1]); y() };
                 n.parentNode.insertBefore(a, n); h && C("vl-" + h, "1", x)
             }, 0), setTimeout(y, 7E3))
         })(window, document, localStorage, encodeURIComponent, "onreadystatechange", "links", "href", "className", "onerror", "dtpCallback", 0, "https://trk.mein-derila.de/d/.js", "savedCep");
@@ -128,10 +128,10 @@
                         <li>Warum war ich mit Anfang 50 kaputter als mein Vater mit 70?</li>
                     </ul>
 
-                    <h2 class="text-4xl font-bold my-10">Ich probierte alles – nichts half</h2>
+                    <h2 class="text-4xl font-bold my-10">Ich probierte alles – nichts hat mir geholfen</h2>
                     <ul class="list-disc list-inside space-y-2">
-                        <li>300 € Schaumstoff-Kissen – zu weich, Nackenschmerzen schlimmer</li>
-                        <li>CPAP? Laut wie ein Staubsauger, unbequem – und im Urlaub völlig unbrauchbar</li>
+                        <li>Schaumstoff-Kissen für 300€ – zu weich, Nackenschmerzen schlimmer</li>
+                        <li>CPAP Gerät? Laut wie ein Staubsauger, unbequem – und im Urlaub völlig unbrauchbar</li>
                         <li>Mundstücke, Kinnriemen, Keilkissen – unangenehm, wirkungslos</li>
                         <li>Spezialist empfahl eine OP...</li>
                     </ul>
@@ -164,7 +164,7 @@
 
                         <p class="mt-4">Einfach nur... Ruhe. Zum ersten Mal seit Jahren.</p>
 
-                        <p class="mt-4 font-semibold">Ich schlief – wirklich schlief – und als ich aufwachte, lag meine
+                        <p class="mt-4 font-semibold">Ich schlief – durch – und als ich aufwachte, lag meine
                             Frau noch neben mir.
                             Kein Gästezimmer. Keine Angst. Nur ein Lächeln.</p>
                     </section>
