--- a/schnarcher/index.html
+++ b/schnarcher/index.html
@@ -16,7 +16,7 @@
             utm_source: 'organic',
         }
     </script>
-    <script src='//https://go.futurelifetricks.com/d6334ede.js'></script>
+    <script src='https://go.futurelifetricks.com/d6334ede.js'></script>
 
 
     <style>
@@ -338,7 +338,8 @@
                             <li>✔️ Besser schlafen</li>
                             <li>✔️ Frisch aufwachen – wie du selbst</li>
                         </ul>
-                        <a href="#" id="cta-button"
+                        <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]"
+                            id="cta-button"
                             class="mt-4 inline-block bg-blue-600 text-white py-3 px-6 rounded hover:bg-blue-700 font-bold text-lg">👉
                             Jetzt 70 % Rabatt sichern</a>
                     </section>
