--- a/schnarcher/index.html
+++ b/schnarcher/index.html
@@ -64,41 +64,96 @@
         }
     </style>
 </head>
-
+<div class="w-full mx-auto text-center py-1" style="background-color: #000000">
+    <p><span style="color: rgb(179, 182, 183);">Advertorial</span><br class="softbreak"></p>
+</div>
 
 <div class="flex flex-col lg:flex-row gap-8 px-4 mx-auto lg:px-12 max-w-7xl">
     <!-- Main Content -->
+
     <div class="bg-gray-50 flex-1">
 
 
+
+
         <div class="bg-gray-50">
+
             <div class="max-w-3xl px-4 py-8 mx-auto bg-white shadow-sm">
+
                 <!-- Header -->
                 <header class="mb-8 text-center">
                     <h1 class="mb-2 text-3xl font-bold leading-tight text-gray-900 md:text-4xl">
-                        Ich hätte fast im Schlaf aufgehört zu atmen – und sie war live dabei.
+                        Ich dachte, es sei nur Schnarchen – bis ich fast im Schlaf aufhörte zu atmen
                     </h1>
-
+                    <p class="text-lg text-gray-700 mt-2 md:mt-4">
+                        Wie ein spezielles Kissen meine Atemaussetzer stoppte – und meine Beziehung rettete.
+                    </p>
                 </header>
+
+                <!-- Experten-Sektion -->
+                <section class="flex items-start gap-4 px-4 py-3 bg-white rounded-md shadow-sm max-w-lg mb-6">
+                    <!-- Expertenbild -->
+                    <img src="https://randomuser.me/api/portraits/men/20.jpg" alt="Experte Daniel T."
+                        class="w-14 h-14 rounded-full object-cover border border-gray-200 shadow-sm mt-1">
+
+                    <!-- Textblock -->
+                    <div>
+                        <div class="flex items-center gap-2">
+                            <!-- Siegel-Icon -->
+                            <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 text-green-600" fill="currentColor"
+                                viewBox="0 0 20 20">
+                                <path fill-rule="evenodd"
+                                    d="M16.707 5.293a1 1 0 010 1.414L8.414 15l-4.121-4.121a1 1 0 011.414-1.414L8.414 12.586l7.293-7.293a1 1 0 011.414 0z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                            <p class="text-sm text-gray-600 font-semibold">Fachlich geprüft</p>
+                        </div>
+                        <p class="text-sm text-gray-800 font-medium">Daniel T., zertifizierter Schlafexperte</p>
+                        <p class="text-xs text-gray-500">15 Jahre Erfahrung in klinischer Schlafdiagnostik</p>
+                    </div>
+                </section>
+
+                <div class="mb-6 border shadow-sm py-3 px-5 bg-yellow-50 border-yellow-200 rounded-md">
+                    <p class="text-sm text-yellow-900 leading-snug">
+                        ⚠️ Die Nachfrage für dieses Kissen ist aktuell sehr hoch – der Lagerbestand sinkt
+                        <strong>schnell</strong>.
+                        <br>
+                        Heute erhalten Sie das <strong>Derila Ergo Kissen mit 70 % Rabatt</strong> – <a
+                            href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]"
+                            id="cta-button"
+                            class="underline font-semibold text-yellow-900 hover:text-yellow-700 transition">nur solange
+                            der Vorrat reicht</a>.
+                    </p>
+                </div>
+
 
                 <img alt="Hero-Bild: Frau liegt entspannt mit ergonomischem Kissen"
                     class="w-full max-w-3xl mx-auto mb-10 rounded shadow-md" src="/img/desperatewife.png" />
 
+
+
                 <!-- Article Content -->
                 <article class="prose max-w-none">
                     <!-- Introduction -->
+                    <article class="prose max-w-none">
+                        <p>Ich werde die Nacht nie vergessen, in der meine Frau mich panisch geweckt hat.</p>
+                        <p class="mt-2 italic">„Du hast wieder nicht geatmet“, flüsterte sie.</p>
+                        <p>Ihr Blick? Panik. Das war kein harmloses Schnarchen mehr – das war ernst.</p>
+                        <p class="mt-4">Ich war ständig müde, gereizt, erschöpft – nachts und tagsüber. Aber ich dachte,
+                            das sei normal.</p>
+                        <p class="mt-4 font-semibold">Rückblickend war es kein Schnarchen. Es war ein stummer Hilferuf
+                            meines Körpers.</p>
+                    </article>
 
-                    <p>Ich werde die Nacht nie vergessen, in der meine Frau mich panisch geweckt hat.</p>
-                    <p class="mt-2 italic">„Du hast wieder nicht geatmet“, flüsterte sie.</p>
-                    <p>Der Blick in ihren Augen? Panik. Das war kein harmloses Schnarchen mehr – das war ernst.</p>
-                    <p class="mt-4 ">Ich hatte keine Ahnung, wie gefährlich das wirklich war. Ich war
-                        ständig müde, gereizt, erschöpft.
-                        Und das nicht nur nachts – sondern jeden einzelnen Tag.</p>
-                    <p class="mt-4 font-semibold">Rückblickend war es kein Schnarchen. Es war ein Alarmzeichen meines
-                        Körpers.</p>
 
 
-
+                    <div class="text-center mt-6 mb-6">
+                        <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]"
+                            id="cta-button"
+                            class="inline-block bg-blue-600 text-white text-lg font-semibold py-3 px-6 rounded hover:bg-blue-700 transition">
+                            ➤ Was mir geholfen hat
+                        </a>
+                    </div>
 
 
                     <h2 class="my-10 text-4xl font-bold">Von harmlos zu gefährlich</h2>
@@ -474,7 +529,7 @@
             <!-- Title -->
             <div class="mb-4 text-center">
                 <h2 class="text-xl font-bold text-gray-800">
-                    Er schläft endlich ruhig – und ich auch
+                    Nie mehr Panik im Schlaf – dank diesem Kissen
                 </h2>
 
             </div>
@@ -490,7 +545,7 @@
                     id="cta-button"
                     class="inline-block px-6 py-3 font-bold text-white rounded-md hover:opacity-90 transition-opacity bg-green-600"
                     rel="noopener noreferrer">
-                    70% RABATT<br>Jetzt klicken
+                    JETZT PROBIEREN >> <br> 30 TAGE TESTEN
                 </a>
             </div>
 
