--- a/schnarcher/index.html
+++ b/schnarcher/index.html
@@ -96,6 +96,7 @@
                     <img src="https://randomuser.me/api/portraits/men/20.jpg" alt="Experte Daniel T."
                         class="w-14 h-14 rounded-full object-cover border border-gray-200 shadow-sm mt-1">
 
+
                     <!-- Textblock -->
                     <div>
                         <div class="flex items-center gap-2">
@@ -108,23 +109,21 @@
                             </svg>
                             <p class="text-sm text-gray-600 font-semibold">Fachlich geprüft</p>
                         </div>
-                        <p class="text-sm text-gray-800 font-medium">Daniel T., zertifizierter Schlafexperte</p>
-                        <p class="text-xs text-gray-500">15 Jahre Erfahrung in klinischer Schlafdiagnostik</p>
+                        <p class="text-sm text-gray-800 font-medium">Daniel T.,Gesundheitsberater mit Fokus auf
+                            klinische Schlafdiagnostik (seit 2009)</p>
+                        <p class="text-xs text-gray-500">Veröffentlicht am 22. Juli 2025 </p>
+
                     </div>
                 </section>
 
-                <div class="mb-6 border shadow-sm py-3 px-5 bg-yellow-50 border-yellow-200 rounded-md">
-                    <p class="text-sm text-yellow-900 leading-snug">
-                        ⚠️ Die Nachfrage für dieses Kissen ist aktuell sehr hoch – der Lagerbestand sinkt
-                        <strong>schnell</strong>.
-                        <br>
-                        Heute erhalten Sie das <strong>Derila Ergo Kissen mit 70 % Rabatt</strong> – <a
-                            href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]"
-                            id="cta-button"
-                            class="underline font-semibold text-yellow-900 hover:text-yellow-700 transition">nur solange
-                            der Vorrat reicht</a>.
-                    </p>
+                <div class="mb-4 text-left">
+                    <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]"
+                        id="cta-button" id="cta-button"
+                        class="inline-block text-sm text-green-700 font-semibold underline hover:text-green-900">Jetzt
+                        erfahren, wie das Kissen wirkt</a>
                 </div>
+
+
 
 
                 <img alt="Hero-Bild: Frau liegt entspannt mit ergonomischem Kissen"
@@ -178,6 +177,20 @@
                         <li>Mundstücke, Kinnriemen, Keilkissen – unangenehm, wirkungslos</li>
                         <li>Spezialist empfahl eine OP...</li>
                     </ul>
+
+                    <div class="my-6 border shadow-sm py-3 px-5 bg-yellow-50 border-yellow-200 rounded-md">
+                        <p class="text-sm text-yellow-900 leading-snug">
+                            ⚠️ Die Nachfrage für dieses Kissen ist aktuell sehr hoch – der Lagerbestand sinkt
+                            <strong>schnell</strong>.
+                            <br>
+                            Heute erhalten Sie das <strong>Derila Ergo Kissen mit 70 % Rabatt</strong> – <a
+                                href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]"
+                                id="cta-button"
+                                class="underline font-semibold text-yellow-900 hover:text-yellow-700 transition">nur
+                                solange
+                                der Vorrat reicht</a>.
+                        </p>
+                    </div>
 
                     <p class="mt-4">Ich glaubte schon, das sei jetzt mein Leben: müde, allein, erschöpft.</p>
                     <p class="mt-2">Bis meine Tochter mir eine Box gab und sagte:</p>
@@ -529,14 +542,15 @@
             <!-- Title -->
             <div class="mb-4 text-center">
                 <h2 class="text-xl font-bold text-gray-800">
-                    Nie mehr Panik im Schlaf – dank diesem Kissen
+                    Das Kissen, das uns beiden die Nächte zurückgegeben hat
                 </h2>
 
             </div>
 
             <!-- Image -->
             <div class="mb-4">
-                <img src="/img/IMG_7361.jpeg" alt="Produktabbildung Derila Ergo Kissen" class="w-full h-auto rounded">
+                <img src="/img/kissen-details.webp" alt="Produktabbildung Derila Ergo Kissen"
+                    class="w-full h-auto rounded">
             </div>
 
             <!-- Button -->
