--- a/schnarchen/index.html
+++ b/schnarchen/index.html
@@ -90,12 +90,44 @@
 
                 <!-- Header -->
                 <header class="mb-4 text-center">
-                    <h1 class="mb-2 text-3xl font-bold leading-tight text-gray-900 md:text-4xl">
+                    <h1 class="mb-2 text-3xl md:text-4xl font-bold leading-tight text-gray-900 ">
                         Ich dachte, es sei nur Schnarchen – bis ich fast im Schlaf aufhörte zu atmen
                     </h1>
-                    <p class="text-lg text-gray-700 mt-2 md:mt-4">
+                    <p class="text-lg md:text-xl text-gray-700 mt-2 md:mt-4">
                         Wie ein spezielles Kissen meine Atemaussetzer stoppte – und meine Beziehung rettete.
                     </p>
+
+                    <!-- Vertrauens-Siegel unter der Headline -->
+                    <div class="mt-4 flex justify-center gap-6 flex-wrap items-center">
+                        <div class="flex items-center gap-2">
+                            <svg class="w-5 h-5 text-green-600" xmlns="http://www.w3.org/2000/svg" fill="none"
+                                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M9 12.75 11.25 15 15 9.75M21 12c0 1.268-.63 2.39-1.593 3.068a3.745 3.745 0 0 1-1.043 3.296 3.745 3.745 0 0 1-3.296 1.043A3.745 3.745 0 0 1 12 21c-1.268 0-2.39-.63-3.068-1.593a3.746 3.746 0 0 1-3.296-1.043 3.745 3.745 0 0 1-1.043-3.296A3.745 3.745 0 0 1 3 12c0-1.268.63-2.39 1.593-3.068a3.745 3.745 0 0 1 1.043-3.296 3.746 3.746 0 0 1 3.296-1.043A3.746 3.746 0 0 1 12 3c1.268 0 2.39.63 3.068 1.593a3.746 3.746 0 0 1 3.296 1.043 3.746 3.746 0 0 1 1.043 3.296A3.745 3.745 0 0 1 21 12Z" />
+                            </svg>
+
+                            <span class="text-sm text-gray-600">Fachlich geprüft</span>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <svg class="w-5 h-5 text-yellow-600" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M11.48 3.499a.562.562 0 0 1 1.04 0l2.125 5.111a.563.563 0 0 0 .475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 0 0-.182.557l1.285 5.385a.562.562 0 0 1-.84.61l-4.725-2.885a.562.562 0 0 0-.586 0L6.982 20.54a.562.562 0 0 1-.84-.61l1.285-5.386a.562.562 0 0 0-.182-.557l-4.204-3.602a.562.562 0 0 1 .321-.988l5.518-.442a.563.563 0 0 0 .475-.345L11.48 3.5Z" />
+                            </svg>
+
+                            <span class="text-sm text-gray-600">4.8/5 basierend auf 14.392 Bewertungen</span>
+                        </div>
+                        <div class="flex items-center gap-2">
+                            <svg class="w-5 h-5 text-black" xmlns="http://www.w3.org/2000/svg" fill="none"
+                                viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M6.633 10.25c.806 0 1.533-.446 2.031-1.08a9.041 9.041 0 0 1 2.861-2.4c.723-.384 1.35-.956 1.653-1.715a4.498 4.498 0 0 0 .322-1.672V2.75a.75.75 0 0 1 .75-.75 2.25 2.25 0 0 1 2.25 2.25c0 1.152-.26 2.243-.723 3.218-.266.558.107 1.282.725 1.282m0 0h3.126c1.026 0 1.945.694 2.054 1.715.045.422.068.85.068 1.285a11.95 11.95 0 0 1-2.649 7.521c-.388.482-.987.729-1.605.729H13.48c-.483 0-.964-.078-1.423-.23l-3.114-1.04a4.501 4.501 0 0 0-1.423-.23H5.904m10.598-9.75H14.25M5.904 18.5c.083.205.173.405.27.602.197.4-.078.898-.523.898h-.908c-.889 0-1.713-.518-1.972-1.368a12 12 0 0 1-.521-3.507c0-1.553.295-3.036.831-4.398C3.387 9.953 4.167 9.5 5 9.5h1.053c.472 0 .745.556.5.96a8.958 8.958 0 0 0-1.302 4.665c0 1.194.232 2.333.654 3.375Z" />
+                            </svg>
+
+                            <span class="text-sm text-gray-600">Empfohlen von 500+ Schlafcoaches</span>
+                        </div>
+                    </div>
+
                 </header>
 
                 <!-- Experten-Sektion -->
@@ -108,14 +140,7 @@
                     <!-- Textblock -->
                     <div>
                         <div class="flex items-center gap-2">
-                            <!-- Siegel-Icon -->
-                            <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4 text-green-600" fill="currentColor"
-                                viewBox="0 0 20 20">
-                                <path fill-rule="evenodd"
-                                    d="M16.707 5.293a1 1 0 010 1.414L8.414 15l-4.121-4.121a1 1 0 011.414-1.414L8.414 12.586l7.293-7.293a1 1 0 011.414 0z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                            <p class="text-sm text-gray-600 font-semibold">Fachlich geprüft</p>
+
                         </div>
                         <p class="text-sm text-gray-800 font-medium">Daniel T.,Gesundheitsberater mit Fokus auf
                             klinische Schlafdiagnostik (seit 2009)</p>
@@ -142,24 +167,35 @@
                 <!-- Article Content -->
                 <article class="prose max-w-none">
                     <!-- Introduction -->
-                    <article class="prose max-w-none">
-                        <p>Ich werde die Nacht nie vergessen, in der meine Frau mich panisch geweckt hat.</p>
-                        <p class="mt-2 italic">„Du hast wieder nicht geatmet“, flüsterte sie.</p>
-                        <p>Ihr Blick? Panik. Das war kein harmloses Schnarchen mehr – das war ernst.</p>
-                        <p class="mt-4">Ich war ständig müde, gereizt, erschöpft – nachts und tagsüber. Aber ich dachte,
-                            das sei normal.</p>
-                        <p class="mt-4 font-semibold">Rückblickend war es kein Schnarchen. Es war ein stummer Hilferuf
-                            meines Körpers.</p>
+                    <!-- Emotionaler Story-Einstieg -->
+                    <article class="prose max-w-none mt-6">
+                        <p><strong>„Du hast aufgehört zu atmen.“</strong></p>
+                        <p>Mitten in der Nacht rüttelte mich meine Frau panisch wach.</p>
+                        <p>Ihr Blick: voller Angst. Ich verstand zuerst nicht, was los war – bis sie sagte, dass ich
+                            minutenlang nicht geatmet hatte.</p>
+                        <p>Ich war schockiert. Ich dachte, es sei nur harmloses Schnarchen. Doch das war der Moment, in
+                            dem mir klar wurde: <strong>Ich habe ein ernstes Problem.</strong></p>
+                        <p>Am nächsten Tag begann meine Recherche – und ich stieß auf eine Lösung, die ich nie erwartet
+                            hätte.</p>
                     </article>
 
 
 
-                    <div class="text-center mt-6 mb-6">
+
+                    <!-- Soft-CTA & Trust Frame -->
+                    <div class="bg-white border border-gray-200 rounded-md shadow-sm p-4 mt-6 mb-8">
+                        <p class="text-gray-800 text-base md:text-lg font-medium leading-snug mb-3">
+                            Ich hätte nie gedacht, dass ein einfaches Kissen so viel verändern kann – aber die erste
+                            Nacht hat es bewiesen.
+                        </p>
                         <a href="https://trk.mein-derila.de/click"
-                            class="inline-block bg-blue-600 text-white text-lg font-semibold py-3 px-6 rounded hover:bg-blue-700 transition">
-                            ➤ Was mir geholfen hat
+                            class="inline-block bg-green-600 text-white font-bold py-2 px-4 rounded hover:bg-green-700 transition duration-200">
+                            👉 Jetzt ansehen: Das Kissen, das mir geholfen hat
                         </a>
+                        <p class="text-sm text-gray-500 mt-2">✓ Fachlich geprüft | ✓ Kein CPAP-Gerät | ✓ Über 14.000
+                            5★-Bewertungen</p>
                     </div>
+
 
 
 
@@ -178,13 +214,25 @@
                         <li>Warum war ich mit Anfang 50 kaputter als mein Vater mit 70?</li>
                     </ul>
 
-                    <h2 class="text-4xl font-bold my-10">Ich probierte alles – nichts hat mir geholfen</h2>
-                    <ul class="list-disc list-inside space-y-2">
-                        <li>Schaumstoff-Kissen für 300€ – zu weich, Nackenschmerzen schlimmer</li>
-                        <li>CPAP Gerät? Laut wie ein Staubsauger, unbequem – und im Urlaub völlig unbrauchbar</li>
-                        <li>Mundstücke, Kinnriemen, Keilkissen – unangenehm, wirkungslos</li>
-                        <li>Spezialist empfahl eine OP...</li>
-                    </ul>
+                    <section class="bg-white text-gray-800 my-6 px-4 py-5 border border-gray-200 rounded-lg shadow-sm">
+                        <h2 class="text-lg font-semibold mb-3">Ich hab wirklich alles versucht – aber nichts hat
+                            geholfen.</h2>
+                        <ul class="list-disc list-inside space-y-2 text-sm md:text-base">
+                            <li><strong>Schaumstoffkissen für 300 €:</strong> Zu weich, Nackenschmerzen schlimmer als
+                                vorher.</li>
+                            <li><strong>CPAP-Gerät:</strong> Laut wie ein Staubsauger. Unbequem. Im Urlaub unmöglich.
+                            </li>
+                            <li><strong>Kinnriemen, Mundstücke, Keilkissen:</strong> Nervig, unnatürlich – keine
+                                Wirkung.</li>
+                            <li><strong>Alternative Therapien:</strong> Hypnose, Magnesium, Schlaftees – alles probiert.
+                                Nichts blieb.</li>
+                            <li><strong>Arztbesuch:</strong> „Vielleicht hilft eine Operation.“ – Das war der Tiefpunkt.
+                            </li>
+                        </ul>
+                        <p class="mt-4 text-sm text-gray-600 italic">Ich glaubte schon, das sei jetzt mein Leben: Müde,
+                            allein, erschöpft.</p>
+                    </section>
+
 
 
                     <div class="my-6 border shadow-sm py-3 px-5 bg-yellow-50 border-yellow-200 rounded-md">
@@ -200,12 +248,61 @@
                         </p>
                     </div>
 
-                    <p class="mt-4">Ich glaubte schon, das sei jetzt mein Leben: müde, allein, erschöpft.</p>
-                    <p class="mt-2">Bis meine Tochter mir eine Box gab und sagte:</p>
-                    <p class="italic">„Papa… bitte. Nur heute Nacht. Für mich.“</p>
-                    <p class="mt-2">Ich dachte erst, sie macht Witze...</p>
-                    <p class="mt-2">Ein Kissen soll mein Schnarchen stoppen? Klar.</p>
-                    <p class="mt-2">Aber hey – was hatte ich zu verlieren?</p>
+                    <section class="my-8 bg-white px-4 py-5 rounded-lg border border-gray-100 shadow-sm text-gray-800">
+                        <p class="text-base md:text-lg leading-relaxed mb-3">
+                            Eines Abends brachte meine Tochter mir eine kleine Box.
+                            <span class="italic">„Papa, bitte probier das hier wenigstens aus“,</span> sagte sie – fast
+                            flehend.
+                        </p>
+                        <p class="text-base md:text-lg leading-relaxed">
+                            Ich lächelte müde. In der Box: ein seltsames, geformtes Kissen.
+                            <span class="font-semibold">„Das soll wirklich helfen?“</span>, fragte ich skeptisch.
+                        </p>
+                        <p class="mt-4 text-sm text-gray-600 italic">
+                            Ich hatte keine Erwartungen mehr – aber ich wollte es ihr zuliebe versuchen.
+                        </p>
+                    </section>
+
+                    <section
+                        class="my-8 px-4 py-5 bg-gray-50 rounded-lg border border-gray-100 shadow-sm text-gray-800">
+                        <p class="text-base md:text-lg leading-relaxed mb-3">
+                            In der ersten Nacht war ich überrascht: Ich schlief schneller ein. Wachte weniger auf.
+                        </p>
+                        <p class="text-base md:text-lg leading-relaxed mb-3">
+                            Und am nächsten Morgen – das erste Mal seit Jahren – fühlte ich mich… wach.
+                            Kein Brummen im Kopf. Kein trockener Mund. Kein genervter Blick meiner Frau.
+                        </p>
+                        <p class="text-sm italic text-gray-600">
+                            Ich dachte, das kann doch nicht nur an diesem Kissen liegen.
+                        </p>
+                    </section>
+
+                    <!-- Visuelle Demonstration -->
+                    <section class="my-10 bg-white rounded-lg border border-gray-100 shadow-sm p-6">
+                        <h2 class="text-xl font-semibold mb-4 text-gray-800">Was verändert sich im Schlaf?</h2>
+
+                        <div class="grid gap-6 md:grid-cols-2 items-center">
+                            <!-- Vergleichsbild -->
+                            <img src="/img/5.jpg" alt="Vorher-Nachher: Luftwege mit & ohne Kissen"
+                                class="rounded shadow-md">
+
+                            <div>
+                                <p class="text-gray-700 mb-3 text-base leading-relaxed">
+                                    Links: Ohne Unterstützung – der Nacken knickt ab, die Atemwege werden teilweise
+                                    blockiert.
+                                    Rechts: Mit dem ergonomischen Kissen – Wirbelsäule & Atemwege bleiben offen,
+                                    Sauerstoff kann frei zirkulieren.
+                                </p>
+                                <p class="text-sm italic text-gray-600">
+                                    Quelle: Darstellung zur Veranschaulichung. Basierend auf Nutzerfeedback & Studien
+                                    zur Schlafposition.
+                                </p>
+                            </div>
+                        </div>
+                    </section>
+
+
+
 
                     <section class="my-10">
                         <h2 class="text-4xl font-bold mb-2">Das Kissen, das alles veränderte</h2>
@@ -564,7 +661,7 @@
                 <a href="https://trk.mein-derila.de/click"
                     class="inline-block px-6 py-3 font-bold text-white rounded-md hover:opacity-90 transition-opacity bg-green-600"
                     rel="noopener noreferrer">
-                    JETZT PROBIEREN >> <br> 30 TAGE TESTEN
+                    Jetzt erfahren, wie das Kissen wirkt
                 </a>
             </div>
 
