--- a/schnarcher/og.html
+++ b/schnarcher/og.html
@@ -566,63 +566,36 @@
         </div>
     </div>
 
-    <!-- Sidebar -->
-    <div class="lg:w-80 lg:sticky lg:top-4 lg:self-start lg:h-screen lg:overflow-y-auto">
-        <div class="bg-white p-6 rounded-lg shadow-md mb-8">
-            <!-- Title -->
-            <div class="mb-4 text-center">
-                <h2 class="text-xl font-bold text-gray-800">
-                    Das Kissen, das uns beiden die Nächte zurückgegeben hat
+    <div class="lg:w-80 lg:sticky my-10 lg:top-4 lg:self-start lg:h-screen lg:overflow-y-auto">
+        <div class="hidden rounded-md bg-blue-900 lg:block sticky top-0 py-3 px-0 text-center border-r border-gray-200">
+
+            <div class="page-sidebar py-3 px-3 bg-[#yourSidebarColor]">
+                <!-- Title for the Sidebar -->
+                <h2 class="font-bold mb-0 text-white text-lg md:text-xl lg:text-2xl">
+                    Die Methode Nr. 1 für schnarchfreien Schlaf
                 </h2>
 
-            </div>
-
-            <!-- Image -->
-            <div class="mb-4">
-                <img src="/img/kissen-details.webp" alt="Produktabbildung Derila Ergo Kissen"
-                    class="w-full h-auto rounded">
-            </div>
-
-            <!-- Button -->
-            <div class="mb-6 text-center">
+                <!-- Main Picture for the Sidebar -->
                 <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]"
-                    id="cta-button"
-                    class="inline-block px-6 py-3 font-bold text-white rounded-md hover:opacity-90 transition-opacity bg-green-600"
-                    rel="noopener noreferrer">
-                    Jetzt erfahren, wie das Kissen wirkt
+                    class="block text-center my-2">
+                    <img src="https://statimage.com/prelanders/images/sleep/deri-product.png?v=13" alt="Derila Kissen"
+                        class="mx-auto max-w-full h-auto" />
                 </a>
-            </div>
 
-            <!-- Testimonial -->
-            <div class="border-t pt-4">
-                <div class="font-semibold text-gray-700 mb-1">
-                    Daniela R.
+                <div class="text-center my-2">
+                    <p class="text-white font-medium">NUR heute 70 % RABATT</p>
                 </div>
 
-                <!-- Star Rating -->
-                <div class="flex mb-2">
-                    <svg class="w-5 h-5" fill="#FFCB45" viewBox="0 -0.5 32 32">
-                        <path d="M16 0l5.4 9.3L32 11.5l-7.2 8L25.9 30 16 25.9 6.1 30l1.1-10.5L0 11.5l10.6-2.2z" />
-                    </svg>
-                    <svg class="w-5 h-5" fill="#FFCB45" viewBox="0 -0.5 32 32">
-                        <path d="M16 0l5.4 9.3L32 11.5l-7.2 8L25.9 30 16 25.9 6.1 30l1.1-10.5L0 11.5l10.6-2.2z" />
-                    </svg>
-                    <svg class="w-5 h-5" fill="#FFCB45" viewBox="0 -0.5 32 32">
-                        <path d="M16 0l5.4 9.3L32 11.5l-7.2 8L25.9 30 16 25.9 6.1 30l1.1-10.5L0 11.5l10.6-2.2z" />
-                    </svg>
-                    <svg class="w-5 h-5" fill="#FFCB45" viewBox="0 -0.5 32 32">
-                        <path d="M16 0l5.4 9.3L32 11.5l-7.2 8L25.9 30 16 25.9 6.1 30l1.1-10.5L0 11.5l10.6-2.2z" />
-                    </svg>
-                    <svg class="w-5 h-5" fill="#FFCB45" viewBox="0 -0.5 32 32">
-                        <path d="M16 0l5.4 9.3L32 11.5l-7.2 8L25.9 30 16 25.9 6.1 30l1.1-10.5L0 11.5l10.6-2.2z" />
-                    </svg>
-                </div>
+                <!-- Main button for the Sidebar -->
+                <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]"
+                    class="inline-block btn shadow-none no-underline rounded-lg leading-normal bg-purple-600 hover:bg-purple-700 py-3 text-white w-full mb-1 text-center font-bold transition-colors duration-200">
+                    JETZT PROBIEREN ➢ ➢
+                </a>
 
-                <!-- Testimonial Text -->
-                <div class="text-gray-600 text-sm">
-                    <p>„Mein Mann hat jahrelang geschnarcht – wir haben alles versucht: Seitenlage, Nasenstreifen, sogar
-                        ein neues Bett. Erst dieses Kissen hat wirklich was gebracht. Seitdem schläft er ruhiger – und
-                        ich auch. Keine Panik mehr nachts, keine Sorge mehr, ob er noch atmet.“</p>
+                <!-- Payment icons -->
+                <div class="flex justify-center w-full mt-2">
+                    <img src="https://statimage.com/prelanders/templates/ecom/img/payment.png?h=3c49f9e71b1902ad9810fc30af9b959e"
+                        alt="Zahlungsmethoden" class="max-w-[140px] h-5">
                 </div>
             </div>
         </div>
