--- a/schnarcher/index.html
+++ b/schnarcher/index.html
@@ -73,17 +73,28 @@
 
     <div class="bg-gray-50 flex-1">
 
-
+        <!-- Gelbe Box -->
+        <div class="bg-yellow-100 border-l-4 border-yellow-500 p-4 my-4">
+            <p class="text-yellow-800">
+                Da die Nachfrage für dieses Kissen sehr hoch ist, sinkt der Lagerbestand
+                <strong class="font-bold">SCHNELL</strong>. Aktuell erhalten Sie das Derila Ergo Kissen zu
+                <strong>
+                    <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]"
+                        class="text-red-600 underline font-bold hover:underline">70 %
+                        RABATT mit 30 Tage Rückgaberecht</a>
+                </strong>
+            </p>
+        </div>
 
 
         <div class="bg-gray-50">
 
-            <div class="max-w-3xl px-4 py-8 mx-auto bg-white shadow-sm">
+            <div class="max-w-3xl px-4 py-2 mx-auto bg-white shadow-sm">
 
                 <!-- Header -->
                 <header class="mb-8 text-center">
-                    <h1 class="mb-2 text-3xl font-bold leading-tight text-gray-900 md:text-4xl">
-                        Ich dachte, es sei nur Schnarchen – bis ich fast im Schlaf aufhörte zu atmen
+                    <h1 class="mb-2 text-4xl font-bold leading-tight text-gray-900 md:text-5xl">
+                        Ich hätte fast im Schlaf aufgehört zu atmen – und sie war live dabei.
                     </h1>
                     <p class="text-lg text-gray-700 mt-2 md:mt-4">
                         Wie ein spezielles Kissen meine Atemaussetzer stoppte – und meine Beziehung rettete.
@@ -91,8 +102,8 @@
                 </header>
 
                 <!-- Vertrauens-Siegel unter der Headline -->
-                <div class="mt-4 flex justify-center gap-6 flex-wrap items-center">
-                    <!-- <div class="flex items-center gap-2">
+                <!-- <div class="mt-4 flex justify-center gap-6 flex-wrap items-center">
+                    <div class="flex items-center gap-2">
                         <svg class="w-5 h-5 text-green-600" xmlns="http://www.w3.org/2000/svg" fill="none"
                             viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                             <path stroke-linecap="round" stroke-linejoin="round"
@@ -100,7 +111,7 @@
                         </svg>
 
                         <span class="text-sm text-gray-600">Fachlich geprüft</span>
-                    </div> -->
+                    </div>
                     <div class="flex items-center gap-2">
                         <svg class="w-5 h-5 text-yellow-600" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
                             viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
@@ -131,8 +142,29 @@
                         </p>
                     </div>
                 </section>
+                
+                -->
 
+                <!-- Sub-Überschrift -->
+                <h3 class="mt-3">
+                    <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]"
+                        class="hover:underline">
+                        <p class="font-bold underline text-blue-600">Nur für kurze Zeit: 70 % RABATT auf das Derila
+                            Ergo
+                            Kissen</p>
+                    </a>
+                </h3>
 
+                <!-- Bewertungsbereich -->
+                <div class="rating-stars-container mb-3 flex items-center flex-wrap">
+
+                    <p class="author pr-3">✅ Fachlich geprüft von Daniel T., spezialisiert auf klinische
+                        Schlafdiagnostik</p>
+
+                    <small class="text-gray-500 block mt-1 w-full">
+                        <span class="inline-block mr-1">📅</span> 21.07.2025
+                    </small>
+                </div>
 
 
 
@@ -161,14 +193,14 @@
 
 
                 <!-- Section: Erster CTA -->
-                <div class="text-center mt-8 mb-8">
+                <!-- <div class="text-center mt-8 mb-8">
                     <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]"
                         id="cta-button"
                         class="inline-block bg-yellow-500 hover:bg-yellow-600 text-white text-lg font-bold py-4 px-8 rounded-full transition shadow-xl tracking-wide">
                         ✅ Endlich wieder ruhig schlafen – ohne Atemaussetzer
                     </a>
                     <p class="mt-3 text-sm text-gray-600">Von über 54.000 Kunden empfohlen – medizinisch geprüft</p>
-                </div>
+                </div> -->
 
 
 
@@ -218,13 +250,13 @@
                 <p class="mt-2">Ein Kissen soll mein Schnarchen stoppen? Klar.</p>
                 <p class="mt-2">Ich hatte nichts zu verlieren – also probierte ich es.</p>
 
-                <div class="text-center mt-6 mb-8">
+                <!-- <div class="text-center mt-6 mb-8">
                     <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]"
                         id="cta-button"
                         class="inline-block bg-yellow-500 text-white text-lg font-semibold py-3 px-6 rounded-full hover:bg-yellow-600 transition shadow-lg">
                         ➤ Genau das hat mein Leben verändert
                     </a>
-                </div>
+                </div> -->
 
 
 
