--- a/schnarcher/index.html
+++ b/schnarcher/index.html
@@ -97,7 +97,7 @@
                         Ich hätte fast im Schlaf aufgehört zu atmen – und sie war live dabei.
                     </h1>
                     <p class="text-lg text-gray-700 mt-2 md:mt-4">
-                        Wie ein spezielles Kissen meine Atemaussetzer stoppte – und meine Beziehung rettete.
+                        Wie ein Kissen meine Atemaussetzer stoppte – und meine Beziehung rettete.
                     </p>
                 </header>
 
@@ -306,67 +306,35 @@
                 </section>
 
 
-                <section class="my-10">
-                    <h2 class="text-xl font-bold mb-2">Warum andere Kissen einfach nicht helfen</h2>
-                    <p class="text-base leading-relaxed text-gray-800">
-                        Ich hab gefühlt jedes Kissen ausprobiert: zu hart, zu weich, zu flach, zu hoch.
-                        <strong>Am Ende war immer irgendwas verspannt oder taub.</strong>
-                    </p>
-                    <p class="mt-4 text-base leading-relaxed text-gray-800">
-                        Diese Standard-Kissen sehen bequem aus – aber sie geben deinem Nacken keinen Halt.
-                        <strong>Kein Konzept, keine Entlastung – kein Wunder, dass der Schmerz immer
-                            wiederkam.</strong>
-                    </p>
-                </section>
+                <h2 class="text-2xl font-bold mb-4">Darum funktioniert Derila tatsächlich</h2>
+                <p class="mb-4">Mein Arzt war erst skeptisch – wie sollte ein Kissen helfen, wo teure
+                    Medizinprodukte fehlschlugen? Doch nachdem er sich mit dem Design von Derila beschäftigt
+                    hatte, begann er, es seinen anderen Patienten mit Schlafapnoe zu empfehlen.</p>
 
+                <h3 class="text-xl font-bold mb-2">Das Geheimnis liegt in der Schmetterlingsform.</h3>
+                <p class="mb-4">Im Gegensatz zu normalen Kissen, bei denen der Kopf zurückfällt und die Atemwege
+                    zusammendrückt, hält Derila Ihren Hals perfekt ausgerichtet. So wird verhindert, dass die
+                    Halsmuskeln zusammenbrechen – die Hauptursache für Schlafapnoe und Schnarchen.</p>
+                <p class="mb-4">Der Memory-Schaum mit hoher Dichte ist ein weiterer Durchbruch. Er sorgt für
+                    beständige Unterstützung die ganze Nacht lang, sodass Ihre Atemwege geöffnet bleiben, selbst
+                    wenn Sie sich hin- und herwälzen. Und dank seiner kühlenden Technologie wachen Sie nicht
+                    verschwitzt auf.</p>
 
-
-
-
-                <h2 class="text-3xl font-bold mb-6">Warum Derila Ergo so gut wirkt</h2>
-
-                <img src="/img/kissen-details.webp" alt="Mann schläft ruhig mit ergonomischem Kissen"
-                    class="w-full rounded-lg shadow-md mb-6 aspect-[2/1] object-cover" />
-
-                <div class="space-y-6">
-                    <div class="flex items-start space-x-4">
-                        <div class="text-green-600 font-bold text-xl">1</div>
-                        <p class="text-base leading-snug">
-                            <strong>Anti-Schnarch-Position</strong> – Die ergonomische Form bringt deinen Kopf so in
-                            Stellung, dass die Atemwege frei bleiben. <br> Ergebnis: <em>Weniger Schnarchen – oft
-                                schon in der ersten Nacht.</em>
-                        </p>
-                    </div>
-                    <div class="flex items-start space-x-4">
-                        <div class="text-green-600 font-bold text-xl">2</div>
-                        <p class="text-base leading-snug">
-                            <strong>Intelligenter Memory-Schaum</strong> – Passt sich deiner Kopfform an und stützt
-                            dort, wo dein Körper es wirklich braucht. Kein Einsinken. Kein Durchhängen.
-                        </p>
-                    </div>
-                    <div class="flex items-start space-x-4">
-                        <div class="text-green-600 font-bold text-xl">3</div>
-                        <p class="text-base leading-snug">
-                            <strong>Belüftungskanäle</strong> – Schluss mit nächtlichem Schwitzen: Die atmungsaktive
-                            Struktur sorgt für angenehmes Schlafklima – Sommer wie Winter.
-                        </p>
-                    </div>
-                    <div class="flex items-start space-x-4">
-                        <div class="text-green-600 font-bold text-xl">4</div>
-                        <p class="text-base leading-snug">
-                            <strong>Für jede Schlafposition</strong> – Egal ob Seiten-, Rücken- oder Bauchlage: Die
-                            seitlichen Flügel geben deinem Nacken Halt – die ganze Nacht.
-                        </p>
-                    </div>
-                    <div class="flex items-start space-x-4">
-                        <div class="text-green-600 font-bold text-xl">5</div>
-                        <p class="text-base leading-snug">
-                            <strong>Konzentriert aufs Wesentliche</strong> – Kein Kabel. Kein Akku. Keine Maske. Nur
-                            ein durchdachtes Design, das einfach funktioniert.
-                        </p>
-                    </div>
+                <div class="text-center mb-8">
+                    <a class="block mt-8"
+                        href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]">
+                        <img class="w-full mx-auto" src="/img/kissen-details.webp" alt="image" />
+                    </a>
                 </div>
 
+                <h2 class="text-2xl font-bold mb-4">Was meinen Arzt am meisten beeindruckt hat?</h2>
+                <p class="mb-4">Es funktioniert für jede Schlafposition. Egal, ob Sie wie ich Rückenschläfer
+                    sind, Seitenschläfer wie meine Frau, oder sogar auf dem Bauch schlafen, Derila sorgt für die
+                    korrekte Ausrichtung. Kein Wunder, dass 87 % der Benutzer von besserem Schlaf innerhalb der
+                    ersten Woche berichten.</p>
+                <p class="mb-4">Während CPAP-Geräte Luft in Ihre Atemwege zwängen, arbeitet Derila mit der
+                    natürlichen Position Ihres Körpers, um sie offen zu halten. Einfach, aber unglaublich
+                    effektiv.</p>
 
 
                 <section class="my-12 bg-yellow-50 p-6 rounded-lg shadow-inner">
