--- a/schnarcher/index.html
+++ b/schnarcher/index.html
@@ -80,7 +80,7 @@
                 <strong class="font-bold">SCHNELL</strong>. Aktuell erhalten Sie das Derila Ergo Kissen zu
                 <strong>
                     <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]"
-                        class="text-red-600 underline font-bold hover:underline">70 %
+                        id="cta-button" class="text-red-600 underline font-bold hover:underline">70 %
                         RABATT mit 30 Tage Rückgaberecht</a>
                 </strong>
             </p>
@@ -148,7 +148,7 @@
                 <!-- Sub-Überschrift -->
                 <h3 class="mt-3">
                     <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]"
-                        class="hover:underline">
+                        id="cta-button" class="hover:underline">
                         <p class="font-bold underline text-blue-600">Nur für kurze Zeit: 70 % RABATT auf das Derila
                             Ergo
                             Kissen</p>
@@ -321,7 +321,7 @@
                     verschwitzt auf.</p>
 
                 <div class="text-center mb-8">
-                    <a class="block mt-8"
+                    <a class="block mt-8" id="cta-button"
                         href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]">
                         <img class="w-full mx-auto" src="/img/kissen-details.webp" alt="image" />
                     </a>
@@ -577,7 +577,7 @@
 
                 <!-- Main Picture for the Sidebar -->
                 <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]"
-                    class="block text-center my-2">
+                    id="cta-button" class="block text-center my-2">
                     <img src="https://statimage.com/prelanders/images/sleep/deri-product.png?v=13" alt="Derila Kissen"
                         class="mx-auto max-w-full h-auto" />
                 </a>
@@ -588,6 +588,7 @@
 
                 <!-- Main button for the Sidebar -->
                 <a href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]"
+                    id="cta-button"
                     class="inline-block btn shadow-none no-underline rounded-lg leading-normal bg-purple-600 hover:bg-purple-700 py-3 text-white w-full mb-1 text-center font-bold transition-colors duration-200">
                     JETZT PROBIEREN ➢ ➢
                 </a>
