--- a/schnarcher/index.html
+++ b/schnarcher/index.html
@@ -170,7 +170,7 @@
 
 
                 <img alt="Hero-Bild: Frau liegt entspannt mit ergonomischem Kissen"
-                    class="w-full max-w-3xl mx-auto mb-10 rounded shadow-md" src="/img/cpap.png" />
+                    class="w-full max-w-3xl mx-auto mb-10 rounded shadow-md" src="/img/IMG_7919.png" />
 
 
 
