--- a/schnarcher/index.html
+++ b/schnarcher/index.html
@@ -206,11 +206,19 @@
 
                 <h2 class="my-10 text-4xl font-bold">Was mit harmlosem Schnarchen begann – wurde lebensbedrohlich
                 </h2>
+                <!-- Video -->
+                <div class="my-6">
+                    <video autoplay loop muted class="w-80 h-[150px] object-cover">
+                        <source src="https://vidads.s3.us-east-1.amazonaws.com/apnea-video.mp4" type="video/mp4" />
+                    </video>
+                </div>
                 <p>Ich dachte, Schnarchen wäre einfach nur nervig. Laut – aber harmlos.</p>
                 <p>Aber dann kamen diese Nächte…</p>
                 <p>Ich wachte mit trockenem Mund und Druck auf der Brust auf.</p>
                 <p>Meine Frau sagte, ich würde im Schlaf nach Luft ringen.</p>
                 <p>Ich fühlte mich, als hätte ich im Schlaf gearbeitet – nicht erholt.</p>
+
+
 
 
                 <ul class="list-disc list-inside mt-4 space-y-2">
