--- a/schnarcher/index.html
+++ b/schnarcher/index.html
@@ -74,7 +74,7 @@
     <div class="bg-gray-50 flex-1">
 
         <!-- Gelbe Box -->
-        <div class="bg-yellow-100 border-l-4 border-yellow-500 p-4 my-4">
+        <!-- <div class="bg-yellow-100 border-l-4 border-yellow-500 p-4 my-4">
             <p class="text-yellow-800">
                 Da die Nachfrage für dieses Kissen sehr hoch ist, sinkt der Lagerbestand
                 <strong class="font-bold">SCHNELL</strong>. Aktuell erhalten Sie das Derila Ergo Kissen zu
@@ -84,7 +84,7 @@
                         RABATT mit 30 Tage Rückgaberecht</a>
                 </strong>
             </p>
-        </div>
+        </div> -->
 
 
         <div class="bg-gray-50">
@@ -92,7 +92,7 @@
             <div class="max-w-3xl px-4 py-2 mx-auto bg-white shadow-sm">
 
                 <!-- Header -->
-                <header class="mb-8 text-center">
+                <header class="my-8 text-center">
                     <h1 class="mb-2 text-4xl font-bold leading-tight text-gray-900 md:text-5xl">
                         Ich hätte fast im Schlaf aufgehört zu atmen – und sie war live dabei.
                     </h1>
