veränderungen und cookie

--- a/schnarchen/index.html
+++ b/schnarchen/index.html
@@ -338,6 +338,12 @@
                         nach Zuhause an.</p>
                 </section>
 
+                <div class="text-center mb-8">
+                    <a class="block mt-8"
+                        href="https://get-derila-ergo.com/derila-ergo/product?l=de&vndr=evf&evf=1&uid=6670&offid=78&affiliate_id=1441&subid=[cmc_vid]">
+                        <img class="w-full  mx-auto" src="/img/apnea-10.jpg" alt="image" />
+                    </a>
+                </div>
 
                 <h2 class="text-2xl font-bold mb-4">Darum funktioniert Derila tatsächlich</h2>
                 <p class="mb-4">Mein Arzt war erst skeptisch – wie sollte ein Kissen helfen, wo teure
@@ -390,12 +396,68 @@
                     </h2>
                     <img src="/img/apnea-9.jpg" alt="Zufriedene Frau mittleren Alters schläft ruhig mit Derila Kissen"
                         class="w-full rounded shadow-md mb-4" />
-                    <blockquote class="border-l-4 border-blue-500 pl-4 italic">„Ich schnarche kaum noch – und mein
-                        Nacken?
-                        Endlich kein Ziehen mehr morgens." – Tom M., 49</blockquote>
-                    <blockquote class="border-l-4 border-blue-500 pl-4 italic mt-4">„Ich hab's meinem Vater
-                        geschenkt. Er
-                        schwärmt bis heute.“ – Amy T., 34</blockquote>
+                    <!--FB COMMENTS-->
+                    <div class="border border-gray-200 rounded-lg p-4 mb-6 bg-white">
+                        <!-- Main Comment -->
+                        <div class="mb-4">
+                            <div class="flex items-start mb-2">
+                                <img class="w-10 h-10 rounded-full mr-3"
+                                    src="https://statimage.com/prelanders/images/avatar-pics/brenda.png"
+                                    alt="User Photo" />
+                                <div>
+                                    <span class="font-semibold block">Britta Wagner</span>
+                                    <span class="text-gray-500 text-sm">Nach zwei Tagen</span>
+                                </div>
+                            </div>
+                            <div class="pl-[52px]">
+                                <p class="mb-2">Hat jemand Derila Kissen ausprobiert? Sind sie gut?</p>
+                                <div class="flex items-center text-gray-500 text-sm">
+                                    <span class="mr-3">20 👍</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Reply 1 -->
+                        <div class="border-l-2 border-gray-200 pl-4 ml-[28px] mb-4">
+                            <div class="flex items-start mb-2">
+                                <img class="w-10 h-10 rounded-full mr-3"
+                                    src="https://statimage.com/prelanders/images/avatar-pics/jenna.png"
+                                    alt="User Photo" />
+                                <div>
+                                    <span class="font-semibold block">Janna Koch</span>
+                                    <span class="text-gray-500 text-sm">Nach zwei Tagen</span>
+                                </div>
+                            </div>
+                            <div class="pl-[52px]">
+                                <p class="mb-2">Ja! Habe zwei von meiner Schwester zu Weihnachten bekommen. So gut
+                                    geschlafen wie SEIT JAHREN nicht mehr</p>
+                                <div class="flex items-center text-gray-500 text-sm">
+                                    <span>😲</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Reply 2 -->
+                        <div class="border-l-2 border-gray-200 pl-4 ml-[28px]">
+                            <div class="flex items-start mb-2">
+                                <img class="w-10 h-10 rounded-full mr-3"
+                                    src="https://statimage.com/prelanders/images/avatar-pics/ben.png"
+                                    alt="User Photo" />
+                                <div>
+                                    <span class="font-semibold block">Ben Jonas</span>
+                                    <span class="text-gray-500 text-sm">Nach einem Tag</span>
+                                </div>
+                            </div>
+                            <div class="pl-[52px]">
+                                <p class="mb-2">Höre immer wieder, wie toll Derila ist. Denke, ich werde es mal
+                                    ausprobieren</p>
+                                <div class="flex items-center text-gray-500 text-sm">
+                                    <span>8 👍</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!--FB COMMENTS ENDS-->
                 </section>
 
 
@@ -427,7 +489,7 @@
                 <div class="mt-10 text-center">
                     <a href="https://trk.mein-derila.de/click" id="cta-button"
                         class="inline-block px-6 py-3 text-base font-bold text-white transition duration-300 bg-green-600 rounded-lg shadow-md hover:bg-green-700">
-                        👉 Jetzt Derila Ergo sichern & 70 % sparen
+                        👉 Jetzt Derila Ergo sichern
                     </a>
                     <p class="mt-2 text-xs italic text-gray-600">Solange der Vorrat reicht</p>
                 </div>
@@ -612,13 +674,13 @@
                 </a>
 
                 <div class="text-center my-2">
-                    <p class="text-white font-medium">NUR heute 70 % RABATT</p>
+                    <p class="text-white font-medium">NUR heute 70 % RABATT <br> + 30 Tage Rückgaberecht</p>
                 </div>
 
                 <!-- Main button for the Sidebar -->
                 <a href="https://trk.mein-derila.de/click" id="cta-button"
                     class="inline-block btn shadow-none no-underline rounded-lg leading-normal bg-purple-600 hover:bg-purple-700 py-3 text-white w-full mb-1 text-center font-bold transition-colors duration-200">
-                    JETZT PROBIEREN ➢ ➢
+                    JETZT TESTEN ➢ ➢
                 </a>
 
                 <!-- Payment icons -->
@@ -686,6 +748,18 @@
     </div>
 </footer>
 
+
+
+<div class="fixed bottom-0 left-0 right-0 bg-gray-100 p-2 text-black text-center text-sm">
+    <p>
+        Wir verwenden nur technisch notwendige Cookies.
+        <a href="https://get-derila-ergo.com/derila-ergo/privacy?l=de&vndr=evf&evf=1&uuid=01982e57-b4b4-71c2-a8a8-262f6c919b6e&offid=78&affiliate_id=1441&c=&hj=1&gae=1&sruep=1&ppdf=credit&_=9662%2C8886%2C2624%2C4288%2C6341%2C7399&dehiv=1&subid=cmc4002515556"
+            class="underline">Mehr erfahren</a>
+    </p>
+    <button onclick="this.parentElement.style.display='none'" class="mt-1 px-2 py-1 bg-gray-200 rounded">
+        Verstanden
+    </button>
+</div>
 </body>
 
 </html>
