--- a/schnarcher/toooot.html
+++ b/schnarcher/toooot.html
@@ -61,6 +61,23 @@
                 transform: scale(1);
             }
         }
+
+        #cookie-popup {
+            display: none;
+            animation: fadeIn 0.3s ease-out;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(10px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
     </style>
 </head>
 
@@ -821,6 +838,19 @@
             <p class="mt-4 text-xs text-center text-gray-200">© 2025 Alle Rechte vorbehalten</p>
         </div>
     </footer>
+
+
+    <!-- Einfacher Hinweis-Banner (keine Opt-In-Funktion nötig) -->
+    <div class="fixed bottom-0 left-0 right-0 bg-gray-100 p-2 text-center text-black text-sm">
+        <p>
+            Wir verwenden nur technisch notwendige Cookies.
+            <a href="https://get-derila-ergo.com/derila-ergo/privacy?l=de&vndr=evf&evf=1&uuid=01982e57-b4b4-71c2-a8a8-262f6c919b6e&offid=78&affiliate_id=1441&c=&hj=1&gae=1&sruep=1&ppdf=credit&_=9662%2C8886%2C2624%2C4288%2C6341%2C7399&dehiv=1&subid=cmc4002515556"
+                class="underline">Mehr erfahren</a>
+        </p>
+        <button onclick="this.parentElement.style.display='none'" class="mt-1 px-2 py-1 bg-gray-200 rounded">
+            Verstanden
+        </button>
+    </div>
 </body>
 
 </html>
